samples/_failures_safe/1761616829_eda01c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80b8b156.c: In function ‘main’:
./samples/SAFE/__tmp_80b8b156.c:119:24: error: missing terminating " character
  119 |                 printf("Matrix 1 columns must equal matrix 2 rows for multiplication
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_80b8b156.c:119:17: error: expected expression at end of input
  119 |                 printf("Matrix 1 columns must equal matrix 2 rows for multiplication
      |                 ^~~~~~
./samples/SAFE/__tmp_80b8b156.c:119:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80b8b156.c:119:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80b8b156.c:119:17: error: expected declaration or statement at end of input
